--- a/PMS/pms_users/templates/registration/login.html
+++ b/PMS/pms_users/templates/registration/login.html
@@ -8,10 +8,10 @@
         <form method="post">
             {% csrf_token %}
 
-            <!-- Email -->
+            <!-- Username / Email -->
             <div class="input-group">
-                <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                <input type="email" name="username" placeholder="Email Address" required>
+                <span class="input-group-text"><i class="fas fa-user"></i></span>
+                <input type="text" name="username" placeholder="Username or Email" required>
             </div>
 
             <!-- Password with toggle -->
